--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -116,7 +116,11 @@ target_link_libraries(${libraryname} PRIVATE Eigen3::Eigen)
 get_filename_component(CMAKE_UPSTREAM_MODULE_LOCATION ${CMAKE_COMMAND} PATH)
 get_filename_component(CMAKE_UPSTREAM_MODULE_LOCATION ${CMAKE_UPSTREAM_MODULE_LOCATION} PATH)
 set(CMAKE_UPSTREAM_MODULE_LOCATION ${CMAKE_UPSTREAM_MODULE_LOCATION}/share/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules)
-include(${CMAKE_UPSTREAM_MODULE_LOCATION}/GenerateExportHeader.cmake)
+if(EXISTS ${CMAKE_UPSTREAM_MODULE_LOCATION}/GenerateExportHeader.cmake)
+    include(${CMAKE_UPSTREAM_MODULE_LOCATION}/GenerateExportHeader.cmake)
+else()
+    include(GenerateExportHeader)
+endif()
 generate_export_header(${libraryname} EXPORT_FILE_NAME CoreExport.h)
 list(APPEND IDYNTREE_CORE_EXP_HEADERS ${CMAKE_CURRENT_BINARY_DIR}/CoreExport.h)
 target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>")
