--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   vcpkg_robotology_TAG: v0.0.3
-  YCM_TAG: v0.11.1
+  YCM_TAG: a1f5dd33353a1304c73131bdc08036ed5c1d39f4
   YARP_TAG: v3.3.2
   ICUB_TAG: v1.15.0
   
@@ -90,8 +90,9 @@ jobs:
       shell: bash
       run: |
         # YCM
-        git clone -b ${YCM_TAG} https://github.com/robotology/ycm
+        git clone https://github.com/robotology/ycm
         cd ycm
+        git checkout ${YCM_TAG}
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install/deps ..
