--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   vcpkg_robotology_TAG: v0.0.3
-  YCM_TAG: a1f5dd33353a1304c73131bdc08036ed5c1d39f4
+  YCM_TAG: v0.11.1
   YARP_TAG: v3.3.2
   ICUB_TAG: v1.15.0
   
@@ -67,7 +67,7 @@ jobs:
     - name: Dependencies [macOS]
       if: matrix.os == 'macOS-latest'
       run: |
-        brew install ace assimp boost eigen swig qt5 orocos-kdl octave
+        brew install ace assimp boost eigen swig qt5 orocos-kdl
     
     - name: Dependencies [Ubuntu]
       if: contains(matrix.os, 'ubuntu')
@@ -92,7 +92,7 @@ jobs:
         # YCM
         git clone https://github.com/robotology/ycm
         cd ycm
-        git checkout a1f5dd33353a1304c73131bdc08036ed5c1d39f4
+        git checkout ${YCM_TAG}
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install/deps ..
@@ -141,6 +141,12 @@ jobs:
         cd build
         cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install/deps -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install/deps ..
         cmake --build . --config ${{ matrix.build_type }} --target install 
+ 
+ 
+    - name: Dependencies (workaround for portaudio YCM problem) [macOS]
+      if: matrix.os == 'macOS-latest'
+      run: |
+        brew install octave
  
     # ===================
     # CMAKE-BASED PROJECT
