Implement a simple example of usage of MatrixView

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ add_unit_test(TransformFromMatrix4x4)
 add_unit_test(CubicSpline)
 add_unit_test(Span)
 add_unit_test(SO3Utils)
+add_unit_test(MatrixView)
 
 
 # We have also some usages of the API that we want to make sure that do not compile
