--- a/src/inverse-kinematics/CMakeLists.txt
+++ b/src/inverse-kinematics/CMakeLists.txt
@@ -26,7 +26,7 @@ endif()
 add_library(iDynTree::${libraryname} ALIAS ${libraryname})
 
 target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
+                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 target_include_directories(${libraryname} PRIVATE include/private)
 
 target_link_libraries(${libraryname} PUBLIC idyntree-core idyntree-high-level
