--- a/examples/cxx/CMakeLists.txt
+++ b/examples/cxx/CMakeLists.txt
@@ -1,10 +1,9 @@
 # Copyright: 2020 Fondazione Istituto Italiano di Tecnologia
 # CopyPolicy: Released under the terms of the MIT license
 
-
 cmake_minimum_required(VERSION 3.16)
 
-project(iDynTreeExamples)
+project(iDynTreeCxxExamples)
 
-add_subdirectory(cxx)
-
+add_subdirectory(KinDynComputationsWithEigen)
+add_subdirectory(InverseKinematics)
