--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -63,8 +63,8 @@ if(IDYNTREE_USES_IRRLICHT)
     find_package(OpenGL)
     find_package(Irrlicht REQUIRED)
 
-    target_include_directories(${libraryname} PRIVATE SYSTEM ${IRRLICHT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
-    target_link_libraries(${libraryname} LINK_PRIVATE ${IRRLICHT_LIBRARY} ${OPENGL_LIBRARIES})
+    target_include_directories(${libraryname} PRIVATE SYSTEM ${OPENGL_INCLUDE_DIR})
+    target_link_libraries(${libraryname} PRIVATE Irrlicht::Irrlicht ${OPENGL_LIBRARIES})
     if(MSVC)
        add_definitions(-D_USE_MATH_DEFINES)
     endif()
